insights container  styling inside the app

--- a/findly-builder/src/app/components/app-body/app-body.component.html
+++ b/findly-builder/src/app/components/app-body/app-body.component.html
@@ -1,5 +1,6 @@
 <router-outlet></router-outlet>
 <div *ngIf="!bridgeData">
+     <!-- <div *ngIf="true" class="sdkInsideApp"> -->
     <app-insights  [data] = "bridgeData" [query]="query"></app-insights>
 </div> 
 <div [hidden]="addNewResult">
