--- a/findly-builder/src/app/components/insights/insights.component.html
+++ b/findly-builder/src/app/components/insights/insights.component.html
@@ -18,7 +18,7 @@
                 <div class="title">CTR</div>
                 <div class="count blue-color">{{ctrVal || 0}}%</div>
             </div>
-            <div class="data-counts" (click)="mouseEnter()">
+            <div class="data-counts graph" (click)="mouseEnter()">
                <img src="assets/icons/graph.svg" (click)="closeCross()">
             </div>
         </div>
