--- a/findly-builder/src/app/components/app-body/app-body.component.html
+++ b/findly-builder/src/app/components/app-body/app-body.component.html
@@ -1,7 +1,7 @@
 <router-outlet></router-outlet>
-<div *ngIf="!bridgeData">
+<div *ngIf="!bridgeData" [ngClass]="{'sdkInsideApp': showInsightFull}">
      <!-- <div *ngIf="true" class="sdkInsideApp"> -->
-    <app-insights  [data] = "bridgeData" [query]="query"></app-insights>
+    <app-insights  [data] = "bridgeData" [query]="query" [showInsightFull] = "showInsightFull"></app-insights>
 </div> 
 <div [hidden]="addNewResult">
     <app-add-result [addNew] = "addNewResult" (closeResult) = closeResult($event)></app-add-result>
