FLY-435, FLY-433 issues fixed

--- a/findly-builder/src/app/components/traits/traits.component.scss
+++ b/findly-builder/src/app/components/traits/traits.component.scss
@@ -176,7 +176,7 @@
             margin: 10px 0px 10px 0px;
             background: #F5F8FA;
             border-radius: 4px;
-            .kr-sg-input-search{
+            .kr-sg-input-text{
                 display: inline-block;
                 width: 0px;
                 display: none;  
