--- a/findly-builder/src/app/components/traits/traits.component.html
+++ b/findly-builder/src/app/components/traits/traits.component.html
@@ -85,7 +85,7 @@
         
             <section class="table-content mt-0">
                 <div class="seach_add_feild">
-                    <div class="kr-sg-input-search m-0" [ngClass]="{'active': showSearch}">                               
+                    <div class="kr-sg-input-text m-0" [ngClass]="{'active': showSearch}">                               
                         <input type="text" placeholder="Search" autocomplete="off" class="input-search" name='searchSources' placeholder="Search" id="fieldSearchId" [(ngModel)]="serachTraits">           
                       </div> 
                       <div class="seach-block" (click)="toggleSearch()"><img *ngIf="!showSearch" src="assets/icons/search.svg"><img *ngIf="showSearch" src="assets/images/close.svg">Search</div>
