--- a/findly-builder/src/app/scss/variables/variables.scss
+++ b/findly-builder/src/app/scss/variables/variables.scss
@@ -444,6 +444,7 @@ input::placeholder{
 		  width: 10px;
 		  right: 10px;
 		  padding: 0;
+		  background-color: transparent;
 		  border: 0;
 		}
 	}
@@ -462,6 +463,7 @@ input::placeholder{
 	padding-right: 25px !important;
 	.toast-close-button{
 		color: $warningRed !important;
+		background-color: transparent;
 		height: 10px !important;
 		position: absolute;
 		width: 10px;
@@ -486,6 +488,7 @@ input::placeholder{
 		.toast-close-button{
 			color: $orange !important;
 			height: 10px !important;
+			background-color: transparent;
 			position: absolute;
 			width: 10px;
 			right: 10px;
