--- a/findly-builder/src/app/components/synonyms/synonyms.component.scss
+++ b/findly-builder/src/app/components/synonyms/synonyms.component.scss
@@ -367,6 +367,7 @@
                                 color: #202124;
                                 font-weight: normal;
                                 padding: 2px 8px;
+                                word-break: break-word;
                             }
                             .or_divider{
                                 margin: 0 5px;
