--- a/findly-builder/src/app/scss/bt-styleguide.scss
+++ b/findly-builder/src/app/scss/bt-styleguide.scss
@@ -2136,7 +2136,7 @@ and open the template in the editor.
             font-size: 16px;            
         }
         &:hover{
-            cursor: pointer;
+            // cursor: pointer;
             background-color: #dbe3f2;
         }
         &:focus{
