--- a/findly-builder/src/app/components/index/index.component.scss
+++ b/findly-builder/src/app/components/index/index.component.scss
@@ -411,6 +411,7 @@
                             line-height: 14px;
                             color: #202124;   
                             cursor: default;
+                            word-break: break-word;
                             img{
                                 cursor: pointer;
                             } 
