--- a/findly-builder/src/app/components/business-rules/business-rules.component.scss
+++ b/findly-builder/src/app/components/business-rules/business-rules.component.scss
@@ -461,6 +461,7 @@
 }
 .dropdownDiv{
     padding: 0 !important;
+    z-index: 99;
     .kr-sg-dropdowns{
         .dropdown-open {
             .dropdown-input{
