--- a/findly-builder/src/assets/web-kore-sdk/demo/custom/customFindly.css
+++ b/findly-builder/src/assets/web-kore-sdk/demo/custom/customFindly.css
@@ -63,11 +63,14 @@
 }
 .sdkInsideApp .insights-container{
   box-shadow: none !important;
-  right: 0;
-  top: 84px;
-  width: 47%;
+  right: 30px;
+  top: 78px;
+  width: calc(50% - 50px);
   border: 1px solid #E5EBF0;
   border-radius: 4px;
+}
+.sdkInsideApp .insights-container .scroll-content{
+  height: calc(100vh - 280px) !important;
 }
 .sdkInsideApp .insights-container .header-sec .col-4{
   flex: 0 0 100%;
@@ -167,13 +170,14 @@ img.logo-img{
     left: 0 !important;
     top: 0;
     z-index: 999999;
-    padding: 25px 0 0px 60px;
+    /* padding: 25px 0 0px 60px; */
+    padding: 25px 30px 0px 30px;
     height: 100%;
     width: 100% !important;
   }
   .search-container.conversation.full-page .ksa-resultsContainer {
     height: calc(100vh - 120px);
-    padding: 0 60px 0 15px;
+    padding: 0 15px;
   }
   .search-container.conversation.full-page .ksa-results-tabesHeader .title-backbutton {
     padding-right: 60px;
@@ -225,3 +229,11 @@ img.logo-img{
     right: 255px !important;
     left: auto !important;
   } 
+  .show_insights{
+    top: 14px !important;
+    right: 15px !important;
+  }
+.matched-faq-containers .faqs-shadow .faqs-wrp-content.custom-faqs-wrp-content-border .title{
+  white-space: normal !important;
+  max-width: 65% !important;
+}
