i18n for business rules

--- a/findly-builder/src/app/components/business-rules/business-rules.component.html
+++ b/findly-builder/src/app/components/business-rules/business-rules.component.html
@@ -118,9 +118,9 @@
                                 <div class="col-10 pr-0">
                                     <div class="kr-sg-dropdowns w-auto">                           
                                         <div class="dropdown dropdown-open">
-                                            <button class="dropdown-toggle dropdown-input" data-toggle="dropdown">{{ruleObj.contextType}}</button>                                            
+                                            <button class="dropdown-toggle dropdown-input" data-toggle="dropdown">{{'businessRules.' +  ruleObj.contextType | translate}}</button>                                            
                                             <ul class="dropdown-menu content-menu">                                                                          
-                                            <li *ngFor="let contextType of ruleOptions.contextTypes" (click)="ruleSelection(ruleObj,contextType,'contextType')"><a>{{contextType}}</a></li>
+                                            <li *ngFor="let contextType of ruleOptions.contextTypes" (click)="ruleSelection(ruleObj,contextType,'contextType')"><a>{{'businessRules.' + contextType | translate}}</a></li>
                                             </ul>
                                         </div>
                                     </div>
@@ -138,9 +138,9 @@
                                             <mat-chip  [selectable]="selectable" class="dropdownDiv">                                       
                                                 <div class="kr-sg-dropdowns d-inline-block w-auto" ngbDropdown>
                                                     <div class="dropdown dropdown-open">
-                                                        <button class="dropdown-toggle dropdown-input" id="dropdownBasic1" ngbDropdownToggle>{{ruleObj.contextCategory}}</button>
+                                                        <button class="dropdown-toggle dropdown-input" id="dropdownBasic1" ngbDropdownToggle>{{'businessRules.' + ruleObj.contextCategory | translate}}</button>
                                                         <ul class="dropdown-menu content-menu faq-filter-add" ngbDropdownMenu>
-                                                            <li ngbDropdownItem *ngFor="let contextCategory of ruleOptions[ruleObj.contextType]" (click)="ruleSelection(ruleObj,contextCategory,'contextCategory')">{{contextCategory}}</li>
+                                                            <li ngbDropdownItem *ngFor="let contextCategory of ruleOptions[ruleObj.contextType]" (click)="ruleSelection(ruleObj,contextCategory,'contextCategory')">{{'businessRules.' +  contextCategory | translate}}</li>
                                                         </ul>
                                                     </div>                                            
                                                 </div>
@@ -150,9 +150,9 @@
                                             <mat-chip [selectable]="selectable" class="dropdownDiv">
                                                 <div class="kr-sg-dropdowns d-inline-block w-auto" ngbDropdown>
                                                     <div class="dropdown dropdown-open">
-                                                        <button class="dropdown-toggle dropdown-input" id="dropdownBasic1" ngbDropdownToggle>{{ruleObj.operator}}</button>
+                                                        <button class="dropdown-toggle dropdown-input" id="dropdownBasic1" ngbDropdownToggle>{{'businessRules.' + ruleObj.operator | translate}}</button>
                                                         <ul class="dropdown-menu content-menu faq-filter-add" ngbDropdownMenu>
-                                                            <li ngbDropdownItem *ngFor="let operator of conditions" (click)="ruleSelection(ruleObj,operator,'operator')">{{operator}}</li>
+                                                            <li ngbDropdownItem *ngFor="let operator of conditions" (click)="ruleSelection(ruleObj,operator,'operator')">{{'businessRules.' + operator | translate}}</li>
                                                         </ul>
                                                     </div>                                            
                                                 </div>                             
@@ -197,9 +197,9 @@
                                 <div class="col-10 row m-0 align-items-center right-side-sec pr-0">
                                     <div class="kr-sg-dropdowns col-4 pl-0">                           
                                         <div class="dropdown dropdown-open">
-                                            <button class="dropdown-toggle dropdown-input" data-toggle="dropdown">{{outcomeObj.outcomeType}}</button>                                            
+                                            <button class="dropdown-toggle dropdown-input" data-toggle="dropdown">{{'businessRules.' + outcomeObj.outcomeType | translate}}</button>                                            
                                             <ul class="dropdown-menu content-menu">                                                                          
-                                            <li *ngFor="let outcomeType of ruleOptions.actions" (click)="outcomeSclection(outcomeObj,outcomeType,'outcomeType')"><a>{{outcomeType}}</a></li>
+                                            <li *ngFor="let outcomeType of ruleOptions.actions" (click)="outcomeSclection(outcomeObj,outcomeType,'outcomeType')"><a>{{'businessRules.' + outcomeType | translate}}</a></li>
                                             </ul>
                                         </div>
                                     </div>
@@ -207,7 +207,7 @@
                                         <app-range-slider [customClass]='"weightsSlider"' [allData]='outcomeObj.sliderObj' (valueEvent)="valueEvent($event,outcomeObj)"></app-range-slider>
                                     </div>
                                     <div class="col-4 pr-0 text-right">
-                                        <span class="result-slider-title">Boosting Results by</span>
+                                        <span class="result-slider-title">{{'businessRules.boostResults' | translate}}</span>
                                         <span class="slider-count">{{outcomeObj.scale}}X</span>
                                     </div>
                                 </div>
@@ -229,9 +229,9 @@
                                             <mat-chip  [selectable]="selectable" class="dropdownDiv">                                           
                                                 <div class="kr-sg-dropdowns d-inline-block w-auto" ngbDropdown container='body'>
                                                     <div class="dropdown dropdown-open">
-                                                        <button class="dropdown-toggle dropdown-input" id="dropdownBasic1" ngbDropdownToggle>{{outcomeObj.outcomeOperator}}</button>
+                                                        <button class="dropdown-toggle dropdown-input" id="dropdownBasic1" ngbDropdownToggle>{{('businessRules.' + outcomeObj.outcomeOperator) | translate}}</button>
                                                         <ul class="dropdown-menu content-menu faq-filter-add" ngbDropdownMenu>
-                                                            <li ngbDropdownItem *ngFor="let operator of conditions" (click)="outcomeSclection(outcomeObj,operator,'outcomeOperator')">{{operator}}</li>
+                                                            <li ngbDropdownItem *ngFor="let operator of conditions" (click)="outcomeSclection(outcomeObj,operator,'outcomeOperator')">{{('businessRules.' + operator) | translate}}</li>
                                                         </ul>
                                                     </div>                                            
                                                 </div>  
