--- a/findly-builder/src/app/components/app-header/app-header.component.html
+++ b/findly-builder/src/app/components/app-header/app-header.component.html
@@ -20,7 +20,18 @@
                        <span routerLink="/attributes" class="d-none"></span>
                        
                     </div>
-                    <div class="headerMenuTab" [routerLink]="['/metrics']" skipLocationChange routerLinkActive="active" (click)="analyticsClick('metrics')">Analytics</div>
+                    <div class="kr-sg-dropdowns headerMenuTab">
+                        <div class="dropdown dropdown-open">
+                            <button class="dropdown-toggle dropdown-input cust-repeat-type" data-toggle="dropdown" > Analytics</button>                                            
+                            <ul class="dropdown-menu content-menu content-width">                                               
+                              <li (click)="metricsOption('/dashboard')"><a>Dashboard</a></li>
+                              <li (click)="metricsOption('/userEngagement')"><a>User Engagement</a></li>
+                              <li (click)="metricsOption('/searchInsights')"><a>Search Insights</a></li>
+                              <li (click)="metricsOption('/resultInsights')"><a>Results Insights</a></li>
+                            </ul>
+                          </div>
+                      </div>
+                    <!-- <div class="headerMenuTab" [routerLink]="['/dashboard']" skipLocationChange routerLinkActive="active" (click)="analyticsClick('metrics')">Analytics</div> -->
                     <div class="headerMenuTab" (click)="analyticsClick('experiments')">Experiments</div>
                     <div class="headerMenuTab" (click)="analyticsClick('settings')">Settings <span class="statusIndicator d-none"></span></div>
                 </div>
