--- a/findly-builder/src/app/components/business-rules/business-rules.component.scss
+++ b/findly-builder/src/app/components/business-rules/business-rules.component.scss
@@ -59,7 +59,13 @@
             .kr-sg-input-search{
                 width: 300px;
                 right: 10px;
+                width: 0px;
+                display: none; 
                 position: relative;
+                &.active{
+                    display: block;
+                    width: 300px;
+                }
             }
             .seach-block{
                 color: #202124;
